@@ -14,6 +14,7 @@ public @Data class LevelInfo {
     public final int filledStars;
     public final int maxStars;
     public final int levelIndex;
+    public final LevelType levelType;
 
     public static final F<LevelInfo, PNode> _icon = new F<LevelInfo, PNode>() {
         @Override public PNode f( final LevelInfo levelInfo ) {
