@@ -1,0 +1,8 @@
+package edu.colorado.phet.buildafraction.view;
+
+/**
+ * @author Sam Reid
+ */
+public enum LevelType {
+    SHAPES, NUMBERS
+}
