@@ -4,7 +4,5 @@ package edu.colorado.phet.buildafraction.view;
  * @author Sam Reid
  */
 public interface MainContext {
-    void goBackToHomeScreen();
-
     void levelButtonPressed( AbstractLevelSelectionNode parent, LevelInfo info );
 }
